--- a/css/styles.css
+++ b/css/styles.css
@@ -11,5 +11,10 @@ body {
 }
 
 
-
+.card {
+  background-color: rgb(231, 231, 241);
+  height: 100%;
+  border: 1px solid black;
+  text-align: center;
+}
 
