--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  margin: 10px;  
   background-color: rgb(197, 220, 236);
   /* border: 1px solid rgb(51, 51, 114); */
 }
@@ -10,6 +11,10 @@ body {
   padding-bottom: 20px;
 }
 
+.row {
+  margin:auto;
+  margin-bottom: 10px;
+}
 
 .card {
   background-color: rgb(231, 231, 241);
