--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,11 @@ body {
 }
 
 .card {
-  background-color: rgb(231, 231, 241);
+  background-color: rgb(222, 222, 239);
   height: 100%;
-  border: 1px solid black;
+  border: solid rgb(117, 117, 146);
   text-align: center;
 }
+
+
 
