--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .jumbotron {
-  background-color: rgb(159, 221, 221);
+  background-color: rgb(160, 211, 211);
   margin-top: 2px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -19,7 +19,7 @@ body {
 .card {
   background-color: rgb(222, 222, 239);
   height: 100%;
-  border: solid rgb(117, 117, 146);
+  border: 1px solid rgb(117, 117, 146);
   text-align: center;
 }
 
