--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,11 @@ body {
 
 .card {
   background-color: rgb(222, 222, 239);
-  height: 100%;
+  height:300px;
   border: 1px solid rgb(117, 117, 146);
   text-align: center;
 }
+
 
 .definition {
   display:none;
